--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@stack-pulse/next-google-login": "^1.0.5",
     "@tanstack/react-query": "^5.56.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
