--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@stack-pulse/next-google-login": "^1.0.5",
+    "@stream-io/node-sdk": "^0.4.1",
+    "@stream-io/video-react-sdk": "^1.3.5",
     "@tanstack/react-query": "^5.56.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
