--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@formatjs/intl-localematcher": "^0.5.4",
     "@hono/zod-validator": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.1",
