--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@stack-pulse/next-google-login": "^1.0.5",
     "@stream-io/node-sdk": "^0.4.1",
     "@stream-io/video-react-sdk": "^1.3.5",
