add pulse beam bg

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "embla-carousel-react": "^8.2.1",
     "firebase": "^10.13.1",
     "firebase-admin": "^12.4.0",
+    "framer-motion": "^11.5.4",
     "hono": "^4.6.1",
     "jose": "^5.9.1",
     "lucide-react": "^0.439.0",
