--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "sonner": "^1.5.0",
+    "stream-chat": "^8.40.8",
+    "stream-chat-react": "^12.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
