--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "stream-chat-react": "^12.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
