--- a/package.json
+++ b/package.json
@@ -41,17 +41,22 @@
     "next": "14.2.9",
     "next-intl": "^3.19.1",
     "next-themes": "^0.3.0",
+    "openai": "^4.63.0",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "rehype-highlight": "^7.0.0",
+    "remark-code-blocks": "^2.0.1",
+    "remark-rehype": "^11.1.1",
     "sonner": "^1.5.0",
     "stream-chat": "^8.40.8",
     "stream-chat-react": "^12.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
@@ -61,6 +66,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.9",
