--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "openai": "^4.63.0",
     "react": "^18",
     "react-datepicker": "^7.3.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
