--- a/package.json
+++ b/package.json
@@ -9,70 +9,70 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "^0.5.4",
+    "@formatjs/intl-localematcher": "^0.5.6",
     "@hono/zod-validator": "^0.2.2",
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@stack-pulse/next-google-login": "^1.0.5",
-    "@stream-io/node-sdk": "^0.4.1",
-    "@stream-io/video-react-sdk": "^1.3.5",
-    "@tanstack/react-query": "^5.56.2",
+    "@stream-io/node-sdk": "^0.4.4",
+    "@stream-io/video-react-sdk": "^1.7.3",
+    "@tanstack/react-query": "^5.59.16",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "embla-carousel-autoplay": "^8.2.1",
-    "embla-carousel-react": "^8.2.1",
-    "firebase": "^10.13.1",
-    "firebase-admin": "^12.4.0",
-    "firebase-functions": "^6.0.1",
-    "framer-motion": "^11.5.4",
-    "hono": "^4.6.1",
-    "jose": "^5.9.1",
+    "embla-carousel-autoplay": "^8.3.1",
+    "embla-carousel-react": "^8.3.1",
+    "firebase": "^10.14.1",
+    "firebase-admin": "^12.7.0",
+    "firebase-functions": "^6.1.0",
+    "framer-motion": "^11.11.10",
+    "hono": "^4.6.8",
+    "jose": "^5.9.6",
     "lucide-react": "^0.439.0",
-    "negotiator": "^0.6.3",
+    "negotiator": "^0.6.4",
     "next": "14.2.9",
-    "next-intl": "^3.19.1",
+    "next-intl": "^3.23.5",
     "next-themes": "^0.3.0",
-    "openai": "^4.63.0",
-    "react": "^18",
-    "react-datepicker": "^7.3.0",
+    "openai": "^4.68.4",
+    "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
-    "rehype-highlight": "^7.0.0",
+    "rehype-highlight": "^7.0.1",
     "remark-code-blocks": "^2.0.1",
     "remark-rehype": "^11.1.1",
     "sonner": "^1.5.0",
-    "stream-chat": "^8.40.8",
-    "stream-chat-react": "^12.0.0",
-    "tailwind-merge": "^2.5.2",
+    "stream-chat": "^8.41.1",
+    "stream-chat-react": "^12.4.1",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8",
-    "zustand": "^5.0.0-rc.2"
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/negotiator": "^0.6.3",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.17.3",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.9",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   }
 }
